# dotfiles

./: .aliases  .bash_profile  .bashrc  .envrc  .funcs  .fzf.bash  .git_commit_template.txt  .gitconfig  .gitignore  .luarc.json  .p10k.zsh  .tmux.conf  .vimrc  .zpreztorc  .zprofile  .zshrc  Justfile  LICENSE  Makefile  README.md  aliases.sh  aws-config  coc-settings.json  ec2.sh  en.utf-8.add  energypy.sh  env.nix  funcs.sh  jupyterlab-vim.sh  keyboard-maestro-macros.kmmacros  language-servers.sh  old-vimrc  package-lock.json  package.json  requirements.txt  setup-dotfiles.sh  setup.sh  shell.nix  starship.toml  ubuntu-setup.sh  (+1 more)
.github/workflows/: test.yml
.ipython/: start.py
.ipython/profile_default/: ipython_config.py
applescripts/: open_chrome.scpt  open_finder.scpt  open_firefox.scpt  open_terminal.scpt
atuin/: config.toml
aws/: ec2.sh  setup.txt
databricks/: README.md  databricks.vimrc  windows.bashrc
direnv/: direnv.toml
dotfiles/: .bash_profile  .bashrc  .envrc  .gitconfig  .gitignore  .luarc.json  .profile  .remarkrc  .stow-local-ignore  .tmux.conf  .vimrc  .zpreztorc  .zprofile  .zshenv  .zshrc  setup.sh  z.sh
dotfiles/common/: .bash_profile  .bashrc  .zshenv  .zshrc  env.sh  setup-path.sh
dotfiles/macos/: .bash_profile  .bashrc  .zprofile  .zshenv  .zshrc
dotfiles/ubuntu/: .bash_profile  .zshrc
dotfiles/windows/: .bashrc
dotfiles/wsl/: .bash_profile  .bashrc  .zshenv  .zshrc  common.sh
dygma/: L1-dvorak.json  L1.json  L2.json  L3.json
firefox/: markdown-links.md
fish/: config.fish  fish_plugins  fish_variables  setup.sh
fish/functions/: search.fish
fzf/: .fzf.bash  .fzf.zsh  completion.zsh  key-bindings.zsh  setup.sh
git/: .gitconfig  .stow-local-ignore
iTerm2/: Profiles.json
js/: package-lock.json  package.json
kitty/: current-theme.conf  init.vim  kitty.conf
linux/: setup.sh  vim
lsd/: config.yaml
mac-apps/: Backtick.kmmacros
macos/: iterm-Profiles.json  keyboard-maestro.kmmacros  pyenv  pyenv-flags  setup.sh
macos/applescripts/: open_firefox.scpt  open_orion.scpt
marksman/: config.toml
nix/: default.nix  env.nix  flake.nix  load-linux.sh  load-macos.sh  load-ubuntu.sh  shell.nix
nvim/: Makefile  README.md  init.lua  lazy-lock.json  plug.lua
nvim/lua/adam/: alpha.lua  augroup.lua  barbar.lua  bufferline.lua  cmp.lua  cokeline.lua  color.lua  copilot.lua  format.lua  fzf.lua  gitsigns.lua  keys.lua  lint.lua  lsp.lua  lualine.lua  mason.lua  null-ls.lua  options.lua  plugins.lua  signature.lua  telescope.lua  treesitter.lua  whichkey.lua
nvim/lua/config/: augroup.lua  command.lua  keymap.lua  keymaps.lua  lazy.lua  option.lua  options.lua
nvim/lua/plugins/: autopairs.lua  cmp.lua  colorscheme.lua  copilot.lua  formatting.lua  linting.lua  lsp.lua  mini.lua  noice.lua  obsidian.lua  oil.lua  snippets.lua  telescope.lua  text-editing.lua  (+3 more)
nvim/snippets/: _.snippets  go.snippets  html.snippets  markdown.snippets  python.snippets  sh.snippets  zsh.snippets  zxpy.snippets
nvim/spell/: en.utf-8.add  en.utf-8.add.spl
ov/: config.yaml
python/: pyproject.toml  setup-general-venv-pkgs.sh  setup-general-venv.sh  setup-pyenv.sh  setup-uv.sh  setup.sh  upgrade-pkgs.sh
python-general/: pyproject.toml  setup.sh
scripts/: aliases.sh  atomic.sh  bootstrap-stow.sh  copy-desktop-screenshot  day.sh  dt  funcs.sh  nbe  random-name.py  s  search.sh  setup-dotfiles.sh  setup-fish.sh  setup-lsps.sh  ssh-ec2  start  start-dots  todo-completion.zsh  todo.sh  trace.sh  who
scripts/todo/: go.mod  todo.go  todo_test.go
skhd/: balance.sh  skhdrc
starship/: starship.toml
stow/: setup.sh
tests/: test_todo.sh
tmux/: setup.sh
ubuntu/: docker  main.sh  nvidia  pyenv  rust  setup.sh  vim
windows/: .bashrc  code-settings.json  copy-settings.sh  terminal-settings.json
wsl/: .bash_profile  .bashrc  .zshenv  .zshrc
yabai/: .yabairc  yabairc
zsh/: setup.sh
(+6 files in other folders)
