[tool.poetry]
name = "general"
version = "0.1.0"
description = ""
authors = ["Adam Green <adam.green@adgefficiency.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
pandas = "^2.0.3"
requests = "^2.31.0"
typer = "^0.9.0"
mypy = "^1.4.1"
fastapi = "^0.101.0"
black = "^23.7.0"
zxpy = "^1.6.3"
awscli = "^1.29.21"
polars = "^0.18.13"
matplotlib = "^3.7.2"
pytest = "^7.4.0"
seaborn = "^0.12.2"
pulp = "^2.7.0"
pandera = "^0.16.1"
pandas-stubs = "^2.0.2.230605"
ruff = "^0.0.282"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
