[tool.poetry]
name = "general"
version = "0.1.0"
description = ""
authors = ["Adam Green <adam.green@adgefficiency.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
pandas = "^2.0.3"
requests = "^2.31.0"
typer = "^0.9.0"
mypy = "^1.4.1"
fastapi = "^0.101.0"
black = "^23.7.0"
zxpy = "^1.6.3"
awscli = "^1.29.21"
polars = "^0.18.13"
matplotlib = "^3.7.2"
pytest = "^7.4.0"
seaborn = "^0.12.2"
pulp = "^2.7.0"
pandera = "*"
pandas-stubs = "^2.0.2.230605"
ruff = "^0.0.282"
hypothesis = "^6.84.2"
datasette = "^0.64.3"
isort = "^5.12.0"
djlint = "^1.32.1"
proselint = "^0.13.0"
yamllint = "^1.32.0"
pydocstyle = "^6.3.0"
ipython = "^8.16.1"
textual = "^0.40.0"
urllib3 = "^2.0.7"
pillow = "^10.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
