[tool.poetry]
name = "general"
version = "0.1.0"
description = ""
authors = ["Adam Green <adam.green@adgefficiency.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.2"
pandas = "^2.2.1"
requests = "^2.31.0"
typer = "^0.9.0"
mypy = "^1.9.0"
fastapi = "^0.101.0"
black = "^23.7.0"
zxpy = "^1.6.3"
awscli = "*"
polars = "^0.18.13"
matplotlib = "^3.7.2"
pytest = "^7.4.0"
seaborn = "^0.12.2"
pulp = "^2.7.0"
pandera = "0.18.3"
pandas-stubs = "^2.0.2.230605"
ruff = "^0.3.3"
hypothesis = "^6.84.2"
datasette = "^0.64.3"
isort = "^5.12.0"
djlint = "^1.32.1"
proselint = "^0.13.0"
yamllint = "^1.32.0"
pydocstyle = "^6.3.0"
ipython = "^8.22.2"
textual = "^0.40.0"
urllib3 = "^2.0.7"
pillow = "^10.1.0"
mdformat = "^0.7.17"
mdformat-frontmatter = "^2.0.8"
mdformat-footnote = "^0.1.1"
jupyterlab = "^4.1"
pylint = "^3.1.0"
jupyterlab-vim = "^4.1.3"
dbt = "^1.0.0.37.9"
dbt-core = "^1.7.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
